# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.184 2005/03/07 19:52:00 wolf31o2 Exp $

  07 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/pre-kmerge.sh:
  Change genkernel check to use best_version and has_version to determine if
  the any previously installed versions of genkernel are up to date. Change
  emerge line for kernels to use -n option to only install if they were not
  previously installed.

  06 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  livecd/cdtar/silo-1.2.6-sparc-cdtar.tar.bz2,
  -livecd/cdtar/silo-1.3.2-sparc64-cdtar.tar.bz2,
  -livecd/cdtar/silo-1.4.4-sparc32-cdtar.tar.bz2,
  livecd/runscript/sparc-archscript.sh:
  Applying sparc32 patch from gustavoz. Replacing silo cdtar files with
  unified sparc32/sparc64 cdtar.

  06 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh,
  livecd/runscript-support/pre-kmerge.sh:
  Change sudoers update to only run if /etc/sudoers exists and only reduce
  splash to 1024x768 on minimal and universal install CD.

  05 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> targets/grp/grp.sh,
  targets/livecd-stage1/livecd-stage1.sh:
  Changing the killall -9 gconfd-2 to gconftool-2 --shutdown and resolving bug
  #73363.

  03 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/runscript/alpha-archscript.sh, livecd/runscript/hppa-archscript.sh,
  livecd/runscript/ppc-archscript.sh, livecd/runscript/sparc-archscript.sh,
  livecd/runscript/sparc64-archscript.sh,
  livecd/runscript/x86-archscript.sh:
  Added a new empty livecd file to each archscript. This will be used for an
  identifier by genkernel to allow booting from a non-primary CDROM.

  03 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Catalyst 1.1.6 is here.
